# bw-secrets

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  SKILL.md  TODO.md  pyproject.toml  setup.sh
.claude/skills/: bw-secrets.md
bw_secrets/: cli.py  daemon.py  gui.py
launchd/: README.md  com.amcr.bw-secrets.plist
scripts/: bw-get  bw-launch  bw-unlock.sh  install-launchd.sh  keychain-get-session.sh  keychain-save-session.sh  launchd-wrapper.sh  setup.sh  start-daemon.sh
src/bw_secrets/: __init__.py  bitwarden.py  cli.py  client.py  daemon.py
