[project]
name = "bw-secrets"
version = "0.3.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
bw-get = "bw_secrets.cli:cmd_get"
bw-suggest = "bw_secrets.cli:cmd_suggest"
bw-reload = "bw_secrets.cli:cmd_reload"
bw-list = "bw_secrets.cli:cmd_list"
bw-add = "bw_secrets.cli:cmd_add"
bw-secrets-daemon = "bw_secrets.daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
